<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.howaner</groupId>
	<artifactId>FramePicture</artifactId>
	<version>1.8.7</version>
	<name>FramePicture</name>
	<description>You can set Pictures in Frames</description>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.bukkit.main>de.howaner.FramePicture.FramePicturePlugin</project.bukkit.main>
		<project.author>Howaner, m0bY_czE</project.author>
		<project.website>http://howaner.de</project.website>
	</properties>

	<repositories>
		<repository>
			<id>pgm-repo-snapshots</id>
			<url>https://repo.pgm.fyi/snapshots</url>
		</repository>
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>app.ashcon</groupId>
			<artifactId>sportpaper</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.dmulloy2</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>5.4.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-legacy</artifactId>
			<version>6.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sk89q</groupId>
			<artifactId>worldedit</artifactId>
			<version>5.6.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<!-- Include the required plugin.yml and config.yml for Bukkit -->
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>9.0.2</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
				</configuration>
			</plugin>
			<!-- Validates that code is properly formatted with Google's code style -->
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.27</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.google.googlejavaformat</groupId>
						<artifactId>google-java-format</artifactId>
						<version>1.27.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
